kubernetes/base/apps/system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idrive-e2-kopia-ui
spec:
  hostnames:
    - kopiur.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy
      namespace: network
  rules:
    - backendRefs:
        - name: idrive-e2-kopia-ui
          port: 51515
      matches:
        - path:
            type: PathPrefix
            value: /
